--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,22 +302,43 @@ padding-bottom: 148px;
 /*====start_working_spce========*/
 
 .working_space{
-
+    padding-top: 140px;
+    display: block;
+    overflow: hidden;
 }
 .container{
 
 }
 .working_space_heading{
-
+text-align: center;
+    padding-bottom: 35px;
 }
 .working_space_heading h1{
-
+    color: #8D448B;
+    text-align: center;
+    font-family: DM Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    text-transform: capitalize;
+    padding-bottom: 10px;
 }
 .working_space_heading h4{
-
+    color: #0F2137;
+    text-align: center;
+    font-family: DM Sans;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: -0.5px;
 }
 .working_space_area{
-
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 
 .ws_gallary{
