--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,6 +339,7 @@ text-align: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
+    padding-bottom: 20px;
 }
 
 .ws_gallary{
@@ -349,9 +350,18 @@ text-align: center;
 }
 
 .ws_button{
-
+    display: flex;
+    border-radius: 5px;
+    background: #EDF0F2;
+    justify-content: space-around;
 }
 .ws_button a{
-
+color: #0F2137;
+    font-family: DM Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 42px;
+    letter-spacing: -0.2px;
 }
 /*====end_working_spce========*/
