--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,20 +337,26 @@ text-align: center;
 .working_space_area{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 .ws_gallary{
 
+    flex: 0 0 33%;
+  max-width: 33.33%;
+  width: 100%;
 }
 .ws_gallary img{
 
 }
 
 .ws_button{
-    display: flex;
+  display: flex;
     border-radius: 5px;
     background: #EDF0F2;
     justify-content: space-around;
+    width: 1360px;
 }
 .ws_button a{
 color: #0F2137;
@@ -362,8 +368,55 @@ color: #0F2137;
     letter-spacing: -0.2px;
 }
 /*====end_working_spce========*/
-
+/*====start_customer_section========*/
 
 .customer{
-  
+    padding-top: 205px;
+    display: block;
+    overflow: hidden;
 }
+.customer_all{
+    display: flex;
+    align-items: center;
+}
+.customer_left{
+
+}
+.customer_left img{
+
+}
+.customer_right{
+    max-width: 476px;
+    width: 100%;
+}
+.customer_right h1{
+color: #0F2137;
+    font-family: DM Sans;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 65px;
+    letter-spacing: -0.5px;
+    padding-bottom: 35px;
+}
+.customer_right p{
+    color: #343D48;
+    font-family: DM Sans;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px;
+    padding-bottom: 27px;
+}
+.customer_button{
+
+}
+.customer_button a{
+color: #8D448B;
+font-family: DM Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 42px; /* 262.5% */
+}
+/*====end_customer_section======*/
