--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -696,9 +696,6 @@ color: #fffffffa;
 .footer_logo a img{
 
 }
-.footer_menu{
-
-}
 
 .footer_menu ul {
 display: flex;
@@ -716,7 +713,4 @@ padding-left: 20px;
     line-height: 33px;
 }
 
-
-
-
-
+/*===end_Footer_Section==*/
