--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,8 @@ text-align: center;
   width: 100%;
 }
 .ws_gallary img{
-
+padding-bottom: 18px;
+  width: 97%;
 }
 
 .ws_button{
@@ -633,23 +634,24 @@ text-align: center;
     justify-content: center;
 }
 .subscribe_mail_button{
-    border-radius: 5px;
-    opacity: 0.07999999821186066;
-    background: #FFF;
-    margin-right: 15px;
+    max-width: 388px;
+  width: 100%;
+  margin-right: 15px;
 }
 .subscribe_mail_button input[type=email]{
 color: #fffffffa;
-    font-family: DM Sans;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 25px;
-    padding-top: 7px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 128px;
-    border-radius: 5px;
+  font-family: DM Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px;
+  border-radius: 5px;
+  background: #161B2A;
+  border: none;
+  padding: 20px 30px;
+  margin-right: 15px;
+  max-width: 388px;
+  width: 100%;
 }
 .Subscribe_button{
     
@@ -662,7 +664,7 @@ color: #fffffffa;
     font-weight: 500;
     line-height: 50px;
     letter-spacing: -0.5px;
-    padding: 5px 28px;
+    padding: 20px 28px;
 }
 
 .footer_menu_nav{
